Reformatted web pages
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@48 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/packages/PCDimension.html
+++ b/www/packages/PCDimension.html
@@ -1,7 +1,20 @@
 <htmL>
 <!-- autocreated by harvestHTML.pl -->
 <title>Package PCDimension</title><head></head>
-<body><h1>Package PCDimension</h1>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link href="http://oompa.r-forge.r-project.org/bianchi.css" rel="stylesheet" type="text/css" />
+<body>
+<div id="logobar">
+  <img src="http://oompa.r-forge.r-project.org/tuba2.gif" alt="OOMPA logo" height="262px" width="156px" />
+<br />
+<br />
+<a href="http://oompa.r-forge.r-project.org/">Main</a>
+<br />
+<a href="http://oompa.r-forge.r-project.org/packages.html">Package List</a>
+</div>
+<div id="mainarea">
+<h1>OOMPA</h1>
+<h2>PCDimension</h2>
 <table>
 <tr><td>Package</td>
 	<td>PCDimension</td></tr>
@@ -14,7 +27,7 @@
 <tr><td>Author</td>
 	<td>Kevin R. Coombes, Min Wang</td></tr>
 <tr><td>Maintainer</td>
-	<td>Kevin R. Coombes <krc@silicovore.com></td></tr>
+	<td>Kevin R. Coombes &lt;krc@silicovore.com&gt;</td></tr>
 <tr><td>Description</td>
 	<td>The PCDimension package implements two methods for determining the number of significant principal components.</td></tr>
 <tr><td>Depends</td>
@@ -26,7 +39,7 @@
 <tr><td>biocViews</td>
 	<td>Clustering</td></tr>
 <tr><td>URL</td>
-	<td>http://oompa.r-forge.r-project.org/</td></tr>
+	<td><A HREF="http://oompa.r-forge.r-project.org/">http://oompa.r-forge.r-project.org/</a></td></tr>
 <tr><td>NeedsCompilation</td>
 	<td>no</td></tr>
 <tr><td>Packaged</td>
@@ -35,6 +48,6 @@
 	<td>R 3.4.0; ; 2017-07-06 13:36:59 UTC; windows</td>
 </tr>
 <tr><td>User Manual</td><td><A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="PCDimension/00check.log">00check.log</A></td></tr><tr><td>Vignettes</td>
-  <td><A HREF="PCDimension/PCDimension-Ex.pdf">PCDimension-Ex.pdf</A>, <A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A>, </td></ttr>
+  <td><A HREF="PCDimension/PCDimension-Ex.pdf">PCDimension-Ex.pdf</A>, <A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></ttr>
 
-</table></body></html>
+</table></div></body></html>
