Fixed problem with auto web pages when there are no vignettes.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@49 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/packages/Thresher.html
+++ b/www/packages/Thresher.html
@@ -47,7 +47,5 @@
 <tr><td>Built</td>
 	<td>R 3.4.0; ; 2017-07-06 13:37:58 UTC; windows</td>
 </tr>
-<tr><td>User Manual</td><td><A HREF="Thresher/Thresher-manual.pdf">Thresher-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="Thresher/00check.log">00check.log</A></td></tr><tr><td>Vignettes</td>
-  <td><A HREF="Thresher/Thresher-Ex.pdf">Thresher-Ex.pdf</A>, <A HREF="Thresher/Thresher-manual.pdf">Thresher-manual.pdf</A></td></ttr>
-
+<tr><td>User Manual</td><td><A HREF="Thresher/Thresher-manual.pdf">Thresher-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="Thresher/00check.log">00check.log</A></td></tr>
 </table></div></body></html>
