--- a/www/packages/PCDimension.html
+++ b/www/packages/PCDimension.html
@@ -47,7 +47,6 @@
 <tr><td>Built</td>
 	<td>R 3.4.0; ; 2017-07-06 13:36:59 UTC; windows</td>
 </tr>
-<tr><td>User Manual</td><td><A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="PCDimension/00check.log">00check.log</A></td></tr><tr><td>Vignettes</td>
-  <td><A HREF="PCDimension/PCDimension-Ex.pdf">PCDimension-Ex.pdf</A>, <A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></ttr>
+<tr><td>User Manual</td><td><A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="PCDimension/00check.log">00check.log</A></td></tr>
 
 </table></div></body></html>
