--- a/www/packages/PCDimension.html
+++ b/www/packages/PCDimension.html
@@ -19,9 +19,9 @@
 <tr><td>Package</td>
 	<td>PCDimension</td></tr>
 <tr><td>Version</td>
-	<td>1.1.3</td></tr>
+	<td>1.1.4</td></tr>
 <tr><td>Date</td>
-	<td>2016-05-09</td></tr>
+	<td>2017-07-12</td></tr>
 <tr><td>Title</td>
 	<td>Finding the Number of Significant Principal Components</td></tr>
 <tr><td>Author</td>
@@ -43,10 +43,11 @@
 <tr><td>NeedsCompilation</td>
 	<td>no</td></tr>
 <tr><td>Packaged</td>
-	<td>2017-07-06 13:36:42 UTC; Kevin</td></tr>
+	<td>2017-08-04 14:06:36 UTC; coom05</td></tr>
 <tr><td>Built</td>
-	<td>R 3.4.0; ; 2017-07-06 13:36:59 UTC; windows</td>
+	<td>R 3.4.0; ; 2017-08-04 14:07:04 UTC; windows</td>
 </tr>
-<tr><td>User Manual</td><td><A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="PCDimension/00check.log">00check.log</A></td></tr>
+<tr><td>User Manual</td><td><A HREF="PCDimension/PCDimension-manual.pdf">PCDimension-manual.pdf</A></td></tr>
+<tr><td>R CHECK</td><td><A HREF="PCDimension/00check.log">00check.log</A></td></tr>
 
 </table></div></body></html>
