--- a/www/packages/Thresher.html
+++ b/www/packages/Thresher.html
@@ -43,9 +43,11 @@
 <tr><td>NeedsCompilation</td>
 	<td>no</td></tr>
 <tr><td>Packaged</td>
-	<td>2017-07-06 13:37:39 UTC; Kevin</td></tr>
+	<td>2017-08-04 14:08:18 UTC; coom05</td></tr>
 <tr><td>Built</td>
-	<td>R 3.4.0; ; 2017-07-06 13:37:58 UTC; windows</td>
+	<td>R 3.4.0; ; 2017-08-04 14:08:54 UTC; windows</td>
 </tr>
-<tr><td>User Manual</td><td><A HREF="Thresher/Thresher-manual.pdf">Thresher-manual.pdf</A></td></tr><tr><td>R CHECK</td><td><A HREF="Thresher/00check.log">00check.log</A></td></tr>
+<tr><td>User Manual</td><td><A HREF="Thresher/Thresher-manual.pdf">Thresher-manual.pdf</A></td></tr>
+<tr><td>R CHECK</td><td><A HREF="Thresher/00check.log">00check.log</A></td></tr>
+
 </table></div></body></html>
